--- a/spring_lab/src/main/resources/templates/cars.html
+++ b/spring_lab/src/main/resources/templates/cars.html
@@ -30,7 +30,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr v-for="car in cars">
+            <tr v-for="car in carList">
                 <td>{{car.car_id}}</td>
                 <td>{{car.brand}}</td>
                 <td>{{car.color}}</td>
